log
lu., 14 de abr. de 2025 21:48:49: 
 tests:  0|6
total_score: 0/70
eeef3b7
lu., 14 de abr. de 2025 22:51:31: 
 hashmap.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
3a3507d
lu., 14 de abr. de 2025 23:11:03: 
 hashmap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
cc8938d
Tue, Apr 15, 2025 12:27:55 PM: 
 tests:  1|5
total_score: 10/70
434ca8a
Tue, Apr 15, 2025 12:51:23 PM: 
 hashmap.c | 35 ++++++++++++++++++++++++++++++++---
 1 file changed, 32 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
891f5fc
Tue, Apr 15, 2025  1:03:16 PM: 
 hashmap.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:57:10: error: unused variable 'datoOriginal' [-Werror=unused-variable]
     long datoOriginal = dato;
          ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
c1d1cea
Tue, Apr 15, 2025  1:03:35 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:57:10: error: unused variable 'datoOriginal' [-Werror=unused-variable]
     long datoOriginal = dato;
          ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
1447ffc
Tue, Apr 15, 2025  1:06:42 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 20/70
e95a5d2
do., 20 de abr. de 2025 17:03:39: 
 tests:  2|5
total_score: 20/70
71fce6c
do., 20 de abr. de 2025 17:20:43: 
 hashmap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:120:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
         if(map->buckets[dato]->key != NULL && is_equal(map->buckets[dato]->key, key));
         ^~
hashmap.c:121:9: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
         {
         ^
cc1.exe: all warnings being treated as errors
b6b5d72
do., 20 de abr. de 2025 17:21:59: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:120:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
         if(map->buckets[dato]->key != NULL && is_equal(map->buckets[dato]->key, key));
         ^~
hashmap.c:121:9: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
         {
         ^
cc1.exe: all warnings being treated as errors
14e6c8d
do., 20 de abr. de 2025 17:32:12: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:120:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
         if(map->buckets[dato]->key != NULL && is_equal(map->buckets[dato]->key, key));
         ^~
hashmap.c:121:9: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
         {
         ^
cc1.exe: all warnings being treated as errors
8518d2d
do., 20 de abr. de 2025 17:32:47: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
71b6781
do., 20 de abr. de 2025 17:41:20: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:98:42: error: 'return' with a value, in function returning void [-Werror]
     if(map == NULL || key == NULL)return NULL;
                                          ^~~~
hashmap.c:96:6: note: declared here
 void eraseMap(HashMap * map,  char * key)
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
5c42ba5
do., 20 de abr. de 2025 17:41:42: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
6994a3d
do., 20 de abr. de 2025 17:51:33: 
 hashmap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  12|2
total_score: 50/70
3623814
do., 20 de abr. de 2025 17:53:13: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
c99c098
do., 20 de abr. de 2025 17:55:06: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
189719a
